# Studia

./: .gitignore  README.md
Cpp/Jedrzej_Kostyk_Cinema_project/: CMakeLists.txt
Cpp/Jedrzej_Kostyk_Cinema_project/tests/: RoomTest.cpp
Cpp/KOLOSY/TEMPLATE/: CMakeLists.txt
Cpp/KOLOSY/TEMPLATE/include/: Pochodna1.h
Cpp/KOLOSY/TEMPLATE/src/: Pochodna2.cpp
Cpp/Programowanie Obiektowe/Jedrzej_Kostyk_Cinema_project/tests/: ClientTest.cpp  TicketManagerTest.cpp  TicketTest.cpp
Cpp/Telekomunikacja i przetwarzanie sygnalow/Hamming/: CMakeLists.txt
Cpp/Telekomunikacja i przetwarzanie sygnalow/Hamming/program/: main.cpp
Cpp/Telekomunikacja i przetwarzanie sygnalow/Hamming/zad1/files/: encoded.txt
Cpp/Telekomunikacja i przetwarzanie sygnalow/XMODEM/Recieve/: CMakeLists.txt  main.cpp
Cpp/Telekomunikacja i przetwarzanie sygnalow/XMODEM/Send/: CMakeLists.txt  main.cpp  sendTXT.txt
CryptographyProject/: pom.xml
CryptographyProject/Model/: pom.xml
CryptographyProject/View/: pom.xml
Introduction/: CMakeLists.txt
Introduction/program/: CMakeLists.txt
Introduction/program/src/: main.cpp
Java/00_FirstJava/: pom.xml
Java/CryptographyProject/: README!.txt
Java/Kolokwium/: Readme!.txt
Java/Kolokwium/jkostyk_242430/: pom.xml
Java/Kolokwium/moje_kolokwium/: pom.xml
Java/Learning/: link_do_kursu
Java/Learning/Kody_learning/: InterfaceExample.java  Przeciwprostokatna.java  Random_numbers.java  biblioteka_math.java
Java/Programowanie komponentowe/SudokuProject/zad11b/: sudoku.sudoku
Java/Programowanie komponentowe/SudokuProject/zad12 - koniec/: pom.xml
Java/Programowanie komponentowe/SudokuProject/zad2/: pom.xml
Java/Programowanie komponentowe/SudokuProject/zad6/: pom.xml
Java/Programowanie komponentowe/SudokuProject/zad8/: pom.xml
Java/SudokuProject/: README!.txt
Java/SudokuProject/zad11a/: README!.txt  sudoku.sudoku
Java/SudokuProject/zad11b/Model/: license.txt  sudokuboard
Java/SudokuProject/zad12 - koniec/Model/: pom.xml  sudokuboard
Java/SudokuProject/zad5/: pom.xml
Java/SudokuProject/zad7/: pom.xml
Java/SudokuProject/zad7/Model/: pom.xml
Java/SudokuProject/zad7/View/: pom.xml
Java/SudokuProject/zad8/Model/: sudokuboard  (+1 more)
Jedrzej_Kostyk_Cinema_project/program/: CMakeLists.txt
Jedrzej_Kostyk_Cinema_project/tests/: ClientManagerTest.cpp  MovieManagerTest.cpp  MovieTest.cpp  TicketTypeTest.cpp
KOLOSY/MOJE ZROBIONE/RackMKar2019/: CMakeLists.txt
KOLOSY/MOJE ZROBIONE/kwapisz_OWOCKI/: CMakeLists.txt
KOLOSY/MOJE ZROBIONE/kwapisz_REGAL/: .~lock.POBI-Kolokwium-1.odt#  POBI-Kolokwium-1.odt
KOLOSY/MOJE ZROBIONE/kwapisz_REJESTR/: CMakeLists.txt
KOLOSY/MOJE ZROBIONE/tomczyk_magazyn/: CMakeLists.txt
KOLOSY/MOJE ZROBIONE/tomczyk_magazyn/src/: Beczka.cpp  Magazyn.cpp  Skrzynia.cpp
KOLOSY/MOJE ZROBIONE/wandachowicz_BUDYNEK/: CMakeLists.txt
KOLOSY/MOJE ZROBIONE/wandachowicz_LAZIK/: CMakeLists.txt
KOLOSY/MOJE ZROBIONE/wandachowicz_PETHOTEL/: CMakeLists.txt
KOLOSY/TEMPLATE/include/: Abstrakcyjna.h  Glowna.h  Pochodna1.h  Pochodna2.h
KOLOSY/TEMPLATE/src/: Glowna.cpp  Pochodna1.cpp  main.cpp
KOLOSY/TEMPLATE/test/: GlownaTest.cpp
KOLOSY/TEMPLATE_KOLOS/: CMakeLists.txt
KOLOSY/TEMPLATE_KOLOS/include/: Boat.h  BoatRental.h  RowBoat.h  SailBoat.h
KOLOSY/TEMPLATE_KOLOS/src/: Boat.cpp  BoatRental.cpp  RowBoat.cpp  SailBoat.cpp  main.cpp
KOLOSY/TEMPLATE_KOLOS/test/: GlownaTest.cpp
KOLOSY/ZROBIONE/Kacprowicz 2018/: CMakeLists.txt
KOLOSY/ZROBIONE/Kacprowicz 2018/include/: Template.h  biuro.h  budynek.h  lokal.h  mieszkanie.h
KOLOSY/ZROBIONE/Kacprowicz 2018/src/: biuro.cpp  budynek.cpp  lokal.cpp  main.cpp  mieszkanie.cpp
KOLOSY/ZROBIONE/Kacprowicz 2018/test/: TestTemplate.cpp
KOLOSY/ZROBIONE/StatekMKar2020/: CMakeLists.txt
KOLOSY/starty same/MKAR_2018_Pociag/Pociągi/: CMakeLists.txt
KOLOSY/starty same/MKAR_2018_Pociag/Pociągi/include/: Pasazerski.h  Pociag.h  Towarowy.h  Wagon.h
KOLOSY/starty same/MKAR_2018_Pociag/Pociągi/src/: Pasazerski.cpp  Pociag.cpp  Towarowy.cpp  Wagon.cpp  main.cpp
KOLOSY/starty same/MKAR_2018_Pociag/Pociągi/test/: BasicModelTest.cpp  PociagTest.cpp
KOLOSY/starty_same/kwapisz_OWOCKI/: tresc2.txt
KOLOSY/starty_same/kwapisz_REGAL/: CMakeLists.txt
Processing/3d_solar_system/: Jedrzej_Kostyk_242439_zad5.pde
Processing/3d_solar_system_ext/: capsule.mtl
Processing/zad2/: illustrator.txt  mapa_242430.ai
Processing/zad3/: final_242430.aep
Processing/zad4/Jedrzej_Kostyk_242430_zad4/: Jedrzej_Kostyk_242430_zad4.pde
Processing/zad5/Jedrzej_Kostyk_242439_zad5/: sketch.properties
Processing/zad6/Jedrzej_Kostyk_242430_zad6/: Jedrzej_Kostyk_242430_zad6.pde
Python/: main.py
Python/Huffman_algorithm/Receive/: main.py  server.txt
Python/Huffman_algorithm/Send/: Huffman.py  main.py
Python/Komputerowa Analiza Danych/zad2/: main.py
Python/Metody Numeryczne/falsi/: functions.py  graphs.py  main.py
Python/Metody Numeryczne/jacobi/: data1.csv  data10.csv  data2.csv  data3.csv  data4.csv  data5.csv  data6.csv  data7.csv  data8.csv  data9.csv  main.py  obliczanie.py  wczytywanie.py
Python/Metody Numeryczne/lagrange/: main.py  obliczanie.py  wyswietlanie.py
Python/Metody Numeryczne/metody_aproksymacji/: main.py
Python/Rozwiązywanie problemów z Kryptografii/krypto/: main.py
Python/Sztczna Inteligencja/neuron_network/: AI.py  README.md  genStats.py
Python/Sztczna Inteligencja/solving_fifteen/: README.md  main.py  runprog.sh
Python/zad2/: main.py
SQL/: kolos_books.sql  kolos_tracks1.sql
Web/DinoGame_Jedrzej_Kostyk/: game.js  index.html  style.css
Web/portfolio_site/: game.html  zad5.html
Web/portfolio_site/scripts/: zad5.js
Web/xml_editor/: index.html  xml.xml
Web/zad5/: form.css  form.js  index.html  xml.xml
Web/zad6/: index.html
Web/zad6/scripts/: script.js
Web/zad6/styles/: style-game.css  style-zad2.css  style.css
Web/zad6/xmls/: xml_zad1.xml  xml_zad2.xml  xml_zad2_dtd.dtd
Workshop/CarRental/: CMakeLists.txt
Workshop/CarRental/program/: CMakeLists.txt
Workshop/CarRental/tests/: AddressTest.cpp  ClientTest.cpp  RentTest.cpp  VehicleTest.cpp
(+379 files in other folders)
